# INZ

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INZ.code-workspace  README.md  main.cpp
CUDA/: CMakeLists.txt  cuPrintf.cu  cuPrintf.cuh  fitness.cu
OpenCL/: fitenss.hpp
include/: ArtGeneration.cpp  ArtGeneration.hpp  artGeneration.cpp  artGeneration.hpp  fitness.cpp  fitness.hpp
include/Config/: ArgsParser.cpp  ArgsParser.hpp  Config.cpp  Config.hpp
include/Genes/: DataStructures.cpp  DataStructures.hpp  Gene.cpp  Gene.hpp  Genotype.cpp  Genotype.hpp  Randoms.hpp
include/OpenGL/: engine.cpp  engine.hpp  options.hpp
include/OpenGL/Drawers/: mesh.cpp  mesh.hpp
include/OpenGL/shaders/: shaders.cpp  shaders.hpp
include/Util/: Logger.hpp  Profiler.cpp  Profiler.hpp
include/png/: cairolib.cpp
includes/: artGeneration.cpp  artGeneration.hpp  fitness.cpp  fitness.hpp  funkcjeOceny.cpp
includes/Config/: ArgsParser.cpp  ArgsParser.hpp  Config.cpp  Config.hpp
includes/Genes/: DataStructures.cpp  DataStructures.hpp  Gene.cpp  Gene.hpp  Genotype.cpp  Genotype.hpp  Randoms.cpp
includes/Util/: Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp
includes/png/: cairolib.hpp  libpng.cpp  libpng.h  libpng.hpp  libvips.hpp
testFiles/: GenerativeArt  GenerativeArt copy  paulcezane.sh  start 4seasons.sh  startart.sh  startbaletnice.sh
